
@startuml finite_difference_methods
!pragma useIntermediatePackages false
!define ABSTRACT &#123;abstract&#125;

class finite_difference_methods.HeatEquationExplicitFDMSolver {
}
abstract class finite_difference_methods.HeatEquationExplicitFDMSolverTemplate {
}
abstract class finite_difference_methods.HeatEquationFDMSolverTemplate {
  ~_a(i,j) \t\t ABSTRACT
  ~_b(i,j) \t\t ABSTRACT
  ~_c(i,j) \t\t ABSTRACT
}
abstract class finite_difference_methods.HeatEquationImplicitFDMSolverTemplate {
}
abstract class finite_difference_methods.SecondOrderFDMSolverTemplate {
  _u: None
  _x: None
  _t: None
  _λ: None
  _M: None
  _N: None
  _δx: None
  _δt: None
  _solution_viz: SecondOrderFDMSolverTemplate._Solution3DVisualizer
  +solve()
  +plot_solution()
  ~_solve_internal() \t\t ABSTRACT
  ~_initial_condition(x) \t\t ABSTRACT
  ~_first_boundary_condition(t) \t\t ABSTRACT
  ~_second_boundary_condition(t) \t\t ABSTRACT
}
~class finite_difference_methods.SecondOrderFDMSolverTemplate._Solution3DVisualizer {
  +plot_solution()
  +prepare_solution_for_visual_analysis(u,x,t)
}
finite_difference_methods.HeatEquationExplicitFDMSolverTemplate <|-- finite_difference_methods.HeatEquationExplicitFDMSolver
finite_difference_methods.HeatEquationFDMSolverTemplate <|-- finite_difference_methods.HeatEquationExplicitFDMSolverTemplate
finite_difference_methods.SecondOrderFDMSolverTemplate <|-- finite_difference_methods.HeatEquationFDMSolverTemplate
finite_difference_methods.HeatEquationFDMSolverTemplate <|-- finite_difference_methods.HeatEquationImplicitFDMSolverTemplate
finite_difference_methods.SecondOrderFDMSolverTemplate *-- finite_difference_methods.SecondOrderFDMSolverTemplate._Solution3DVisualizer
footer Generated by //py2puml//
@enduml